--- a/config/flamingsms.global.php.dist
+++ b/config/flamingsms.global.php.dist
@@ -13,6 +13,10 @@ return array(
 		'gateway_classmap' => array(
 			'coolsms' => 'FlamingSms\SmsGateway\CoolSms',
 			'fakegw' => 'FlamingSms\SmsGateway\FakeGw',
-		)
+		),
+		
+		'sms_queue' => array(
+			'default_email_receiver' => 'my-receiver@email.invalid'
+		),
 	)
 );
